# secureai-editor

./: .env.example  .gitignore  GEMINI.md  Makefile  README.md  demo_vulnerable.py  docker-compose.prod.yml  docker-compose.yml  ngrok.yml.example  prometheus.yml  replace.js  secureai-editor.code-workspace  test_sprint11.py
.github/: PULL_REQUEST_TEMPLATE.md
apps/: README.md
apps/frontend/src-tauri/: Cargo.toml  tauri.conf.json
apps/frontend/src-tauri/capabilities/: default.json
apps/frontend/src-tauri/src/: lib.rs  main.rs
docs/: 00_ARCHITECTURE_DECISIONS.md  01_ERD.md  01_ERD_V3_260523.md  02_API_DESIGN.md  02_API_DESIGN_V2.md  02_API_DESIGN_V3.md  02_API_DESIGN_V5_260523.md  03_DOCKER_INFRA.md  03_DOCKER_INFRA_V2.md  03_DOCKER_INFRA_V3_260523.md  04_REPOSITORY_STRUCTURE.md  05_ARCHITECTURE_PHILOSOPHY.md  06_REPOSITORY_STRUCTURE_V2.md  07_GITHUB_PROJECTS.yml  07_GITHUB_PROJECTS_V2.yml  07_GITHUB_PROJECTS_V2_260523.yml  07_SPRINT_BACKLOG.md  07_SPRINT_BACKLOG_V2.md  07_SPRINT_BACKLOG_V3.md  07_SPRINT_BACKLOG_V4.md  07_SPRINT_BACKLOG_V4_260523.md  08_CHECKPOINT_FLOW.md  09_DESIGN_SYSTEM.md  10_UI_UX_REVISIONS.md  11_CLAUDE_CODE_GUIDE.md  12_API_SECURITY_CHECKLIST.md  13_BACKLOG_ADDITIONS.md  14_SECURITY_TEAM_FEATURES.md  16_ARCHITECTURE_CURRENT.md  17_ARCHITECTURE_CURRENT_V2_260523.md  18_VC_REVIEW_RESPONSE_260530.md  19_MCP_ECOSYSTEM_EXPANSION.md  20_ANDROID_ADVANCED_FEATURES.md  21_VC_DEMO_NUMBERS_260620.md  21_VC_DEMO_NUMBERS_260627.md  BUG_TRACKER.md  EVALUATION_GUIDE.md  GIT_GUIDE.md  README_V1.md  setup_github_projects.sh  (+10 more)
nginx/: .gitignore  nginx.conf
(+1268 files in other folders)
