[package]
name = "secureai-desktop"
version = "0.1.0"
description = "SecureAI Desktop — AI 보안 감사 에이전트"
edition = "2021"

[lib]
name = "secureai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-fs     = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell  = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
